tests/error/move_across_foreach_loop_boundary.bz
// error: unable to move variable 'i', because it is outside a loop boundary
// note: variable was declared here
function test()
{
	let i = 0;
	let arr = [2: int32]();
	for (let _ in arr)
	{
		move i;
	}
}
